Added bash highlighting and JAVA_OPTS to readme